[project]
name = "envex"
version = "4.2.1"
description = "Environment interface with (optionally encrypted) .env with hashicorp vault support"
readme = "README.md"
license = { file = "LICENSE.md" }
requires-python = ">=3.12,<3.15"
authors = [
    { name = "David Nugent", email = "davidn@uniquode.io" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "pycryptodome>=3.23.0",
]
scripts = {envcrypt = "envex.scripts.envcrypt:main", env2hvac = "envex.scripts.env2hvac:main", envsecrets = "envex.scripts.envsecrets:main", seal = "envex.scripts.seal:main"}

[project.urls]
homepage = "https://github.com/deeprave/envex"
repository = "https://github.com/deeprave/envex"

[tool.ruff]
namespace-packages = ["envex"]

[tool.pytest.ini_options]
minversion = "9.0"
markers = "integration: mark a test as an integration test"
addopts = "-m 'not integration'"
pythonpath = ["."]
testpaths = ["tests"]

[tool.uv.build-backend]
module-root = ""

[dependency-groups]
dev = [
    "pytest-cov>=7.1,<8.0",
    "pytest-mock>=3.15.1",
    "pytest>=9.0",
    "testcontainers>=4.14.0",
]
vault = [
    "hvac>=1.1.1",
]

[build-system]
requires = ["uv_build>=0.11.10,<0.12.0"]
build-backend = "uv_build"
